# Test_client

./: main.py  mod_split.py  mod_unsplit.py  mod_validate.py  mod_version.py  pyproject.toml  util.py
.minecraft/versions/CMagic_client/mods/: magic_girl_phone-1.0.1.jar.disabled
.minecraft/versions/CMagic_client/mods/magic_girl_phone/: chat_history.db
config/: mod_info.json
