[project]
name = "cmagic-client-update"
version = "0.1.0"
description = ""
authors = [
    {name = "咕咕",email = "baiguguos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "qtwidgets (>=1.1,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
